--- a/saie/web-app/reports/correlatividades.jrxml
+++ b/saie/web-app/reports/correlatividades.jrxml
@@ -29,11 +29,38 @@
 	</parameter>
 	<field name="descripcion" class="java.lang.String"/>
 	<field name="materias" class="java.util.Collection"/>
+	<group name="nivel">
+		<groupExpression><![CDATA[$F{descripcion}]]></groupExpression>
+		<groupHeader>
+			<band height="29">
+				<staticText>
+					<reportElement x="3" y="9" width="100" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="Arial"/>
+					</textElement>
+					<text><![CDATA[Nivel]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="113" y="9" width="440" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="Arial"/>
+					</textElement>
+					<text><![CDATA[Materias]]></text>
+				</staticText>
+				<line>
+					<reportElement x="5" y="4" width="538" height="1"/>
+				</line>
+			</band>
+		</groupHeader>
+		<groupFooter>
+			<band height="3"/>
+		</groupFooter>
+	</group>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch">
+		<band height="76" splitType="Stretch">
 			<staticText>
 				<reportElement x="79" y="54" width="137" height="20"/>
 				<textElement textAlignment="Center">
@@ -50,41 +77,26 @@
 			</textField>
 		</band>
 	</title>
-	<pageHeader>
-		<band height="20" splitType="Stretch">
-			<staticText>
-				<reportElement x="0" y="0" width="100" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial"/>
-				</textElement>
-				<text><![CDATA[Nivel]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="105" y="0" width="450" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial"/>
-				</textElement>
-				<text><![CDATA[Materias]]></text>
-			</staticText>
-		</band>
-	</pageHeader>
 	<detail>
-		<band height="20" splitType="Stretch">
+		<band height="29" splitType="Stretch">
 			<textField>
-				<reportElement x="2" y="0" width="98" height="20"/>
+				<reportElement x="3" y="0" width="100" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{descripcion}]]></textFieldExpression>
 			</textField>
 			<subreport>
-				<reportElement x="105" y="0" width="450" height="20"/>
-				<connectionExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{materias})]]></connectionExpression>
-				<subreportExpression class="java.lang.String"><![CDATA[new File($P{SUBREPORT_DIR},"correlatividades_materias.jasper")]]></subreportExpression>
+				<reportElement style="table" x="113" y="0" width="440" height="20"/>
+				<subreportParameter name="SUBREPORT_DIR">
+					<subreportParameterExpression><![CDATA[$P{SUBREPORT_DIR}]]></subreportParameterExpression>
+				</subreportParameter>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{materias})]]></dataSourceExpression>
+				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"correlatividades_materias.jasper")]]></subreportExpression>
 			</subreport>
+			<line>
+				<reportElement x="107" y="2" width="1" height="25"/>
+			</line>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
 	<pageFooter>
 		<band height="54" splitType="Stretch"/>
 	</pageFooter>
